[package]
name = "uniqueid"
description = " Generates a unique hash/identifier for a system given a set of parameters."
homepage = "https://github.com/ChecksumDev/uniqueid"
readme = "README.md"
license = "GPL-3.0"
keywords = ["unique", "identifier", "hash", "hwid", "hardware-id"]
categories = [
    "cryptography",
    "authentication",
    "data-structures",
    "os",
    "hardware-support"
]
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sha3 = "0.10"
sysinfo = "0.23"
